# fastapi-simple-architecture

./: .gitignore  README.md  docker-compose.yml  init_db.py  main.py  pyproject.toml
app/application/ports/: db_client_port.py  post_repository_port.py  user_repository_port.py
app/application/services/: user_service.py
app/db/: database_session.py  dependencies.py
app/db/clients/: db_client.py  postgres_client.py  sqlite_client.py
app/domain/entities/: role.py
app/domain/enums/: role.py
app/http/: exceptions.py
app/infrastructure/mappers/: user_mapper.py
app/presentation/api/: auth_router.py  post_router.py  user_router.py
app/presentation/dependencies/: deps.py
app/repository/: post_repository.py  role_repository.py  user_repository.py
app/repository/mappers/: post_mapper.py  user_mapper.py
app/routers/: auth_router.py  deps.py  post_router.py  user_router.py
app/services/: auth_service.py  post_service.py  user_service.py
app/shared/: role_enum.py
docs/database/: schema.sql  schema_postgres.sql
fastapi-simple-architecture/: main.py  pyproject.toml
fastapi-simple-architecture/tests/: conftest.py  test_pact_provider.py
frontend/: package.json  pnpm-lock.yaml
frontend/src/: App.css  App.tsx
pacts/: FrontendConsumer-BackendProvider.json
testing-class/: pyproject.toml
testing-class/basic/: main.py  test_main.py
testing-class/fixtures/: test_main.py
testing-class/mocking/: main.py  test_main.py
testing-class/parametrize/: test_main.py
testing-class/yield_fixture/: db.py  test_db.py
tests/: conftest.py
(+42 files in other folders)
